--- a/app/index.html
+++ b/app/index.html
@@ -3,83 +3,112 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Books!</title>
-  <link href='http://fonts.googleapis.com/css?family=Quando' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.0/themes/base/jquery-ui.css">
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
-   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
 </head>
 <body>
 
   <div class="nav-header menu-wrapper">
-  <nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="fa fa-bars"></span>
-        </button>
-        <a class="navbar-brand" href="#"><img class="img-responsive nav-logo" src="/img/fly-pig-serious-icon.png"></a>
+    <nav class="navbar navbar-default" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="fa fa-bars"></span>
+          </button>
+          <a class="navbar-brand" href="#">
+            <img class="img-responsive nav-logo" src="/img/fly-pig-serious-icon.png">
+          </a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-left">
+            <li>Book Dangerous</li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+               <a href="#" class="add-book-btn"
+                data-toggle="modal"
+                data-target="#addBookModal">Add Book</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-left">
-         <li>Books Dangerous</li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><i class="fa fa-power-off fa-2x"></i></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</div>
-
-  <div id="books">
-    <div id="imageCoverUpload">
-      <img src="" alt="" id="uploadedImage">
-      <form id="uploadCoverForm" method="post" action="/api/cover" enctype="multipart/form-data">
-        <input type="file" id="coverImageUpload" name="coverImageUpload">
-      </form>
-      <div id="status"></div>
-    </div>
-    <form action="#" id="addBook">
-      <div>
-        <input type="hidden" id="coverImage"/>
-        <label for="title">Title: </label>
-        <input type="text" id="title"/>
-        <label for="author">Author: </label>
-        <input type="text" id="author"/>
-        <label for="releaseDate">Release Date: </label>
-        <input type="text" id="releaseDate"/>
-        <label for="keywords">Keywords: </label>
-        <input type="text" id="keywords"/>
-        <button id="add" class="btn btn-primary">Add</button>
-      </div>
-    </form>
+    </nav>
   </div>
 
-  <div id="bookList"></div>
+  <div id="page-content">
+    <div class="row">
+      <div class="container center-block">
 
+        <div class="modal fade" id="addBookModal" tabindex="-1" role="dialog" aria-labelledby="addBookModal" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="addBookModalLabel">Which book do you dangerously?</h4>
+              </div>
+              <div class="modal-body">
+                <div id="books" class="container">
+                  <div id="imageCoverUpload">
+                    <img src="" alt="" id="uploadedImage">
+                    <form id="uploadCoverForm" method="post" action="/api/cover" enctype="multipart/form-data">
+                      <input type="file" id="coverImageUpload" name="coverImageUpload">
+                    </form>
+                    <div id="status"></div>
+                  </div>
+                  <form action="#" method="post" id="addBook">
+                    <div>
+                      <input type="hidden" id="coverImage"/>
+                      <label for="title">Title: </label>
+                      <input type="text" id="title"/>
+                      <label for="author">Author: </label>
+                      <input type="text" id="author"/>
+                      <label for="releaseDate">Release Date: </label>
+                      <input type="text" id="releaseDate"/>
+                      <label for="keywords">Keywords: </label>
+                      <input type="text" id="keywords"/>
+                      <button id="add" class="btn btn-primary hidden">Add</button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <label for="add" class="btn btn-primary">Save & Close</label>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div id="bookList" class="col-md-12"></div>
+
+      </div>
+    </div>
+  </div>
 
   <script id="bookTemplate" type="text/template">
-    <div class="bookContainer">
-	  <img src="<%= coverImage %>" alt="coverImage"/>
-	  <ul>
-		  <li>Title: <%= title %></li>
-		  <li>Author: <%= author %></li>
-		  <li>Release: <%= $.format.date( new Date( releaseDate ), 'MMMM yyyy' ) %></li>
+    <div class="col-md-6 bookWrap">
+      <div class="bookContainer col-xs-12 col-sm-12 col-md-12">
+    <img src="<%= coverImage %>" alt="coverImage"/>
+    <ul>
+      <li>Title: <%= title %></li>
+      <li>Author: <%= author %></li>
+      <li>Release: <%= $.format.date( new Date( releaseDate ), 'MMMM yyyy' ) %></li>
 		  <li>Keywords: &nbsp; <% _.each( keywords, function( keyobj ) { %><%= keyobj.keyword %><% } ); %></li>
 	  </ul>
 	  <img class="delete" src="img/delete.jpg">
-	  </div>  
+    </div>
+    </div>
   </script>
 
 	<script src="js/lib/jquery.js"></script>
 	<script src="js/lib/jquery-ui.js"></script>
   <script src="js/lib/jquery-dateFormat.min.js"></script>
   <script src="js/lib/jquery.form.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script src="js/lib/underscore.js"></script>
 	<script src="js/lib/backbone.js"></script>
 	<script src="js/models/book.js"></script>
