adds modal styling

--- a/app/index.html
+++ b/app/index.html
@@ -48,10 +48,10 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="addBookModalLabel">Which book do you dangerously?</h4>
+                <h4 class="modal-title" id="addBookModalLabel">New Book!</h4>
               </div>
               <div class="modal-body">
-                <div id="books" class="container">
+                <div id="books">
                   <div id="imageCoverUpload">
                     <img src="" alt="" id="uploadedImage">
                     <form id="uploadCoverForm" method="post" action="/api/cover" enctype="multipart/form-data">
