touches front-end bookContainer, adds wish list of items

--- a/app/index.html
+++ b/app/index.html
@@ -107,6 +107,10 @@
 	        </ul>
         </div>
         <img class="delete" src="img/delete.png">
+        <div class="bookInteractionBar">
+          <div class="bookUpdated">Updated: 34 minutes ago . . .</div>
+          <button class="bookComment">Comment</button> 
+        </div>
       </div>
     </div>
   </script>
