working with navbar collapse

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,11 @@
             <img class="img-responsive nav-logo" src="/img/fly-pig-serious-icon.png">
           </a>
         </div>
+        <div id="navbar" class="navbar-collapse collapse in" aria-expanded="false">
+          <ul class="nav navbar-nav">
+            <li>Woop</li>
+          </ul>
+        </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-left">
             <li>Book Dangerous</li>
@@ -115,21 +120,21 @@
     </div>
   </script>
 
-	<script src="js/lib/jquery.js"></script>
-	<script src="js/lib/jquery-ui.js"></script>
+  <script src="js/lib/jquery.js"></script>
+  <script src="js/lib/jquery-ui.js"></script>
   <script src="js/lib/jquery-dateFormat.min.js"></script>
   <script src="js/lib/jquery.form.min.js"></script>
   <script src="js/lib/starrr.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script src="js/lib/underscore.js"></script>
-	<script src="js/lib/backbone.js"></script>
-	<script src="js/models/book.js"></script>
-	<script src="js/collections/library.js"></script>
+  <script src="js/lib/underscore.js"></script>
+  <script src="js/lib/backbone.js"></script>
+  <script src="js/models/book.js"></script>
+  <script src="js/collections/library.js"></script>
   <script src="js/views/book.js"></script>
   <script src="js/views/booklist.js"></script>
   <script src="js/views/thumbnail.js"></script>
   <script src="js/views/library.js"></script>
-	<script src="js/app.js"></script>
+  <script src="js/app.js"></script>
 
 
 
