--- a/app/index.html
+++ b/app/index.html
@@ -116,7 +116,7 @@
         <img class="delete" src="img/delete.png">
         <div class="bookInteractionBar">
           <div class="bookUpdated">Updated: 34 minutes ago . . .</div>
-          <button class="bookComment">Comment</button> 
+          <button class="bookComment"><a href="#/booyah">Comment</a></button> 
         </div>
       </div>
     </div>
