--- a/app/index.html
+++ b/app/index.html
@@ -110,7 +110,7 @@
           <ul>
             <li>Title: <%= title %></li>
             <li>Author: <%= author %></li>
-            <li>Date Completed: <%= $.format.date( new Date( dateCompleted ), 'MMMM yyyy' ) %></li>
+            <li>Completed: <%= $.format.date( new Date( dateCompleted ), 'MMMM yyyy' ) %></li>
 		        <li>Keywords: &nbsp; <% _.each( keywords, function( keyobj ) { %><%= keyobj.keyword %><% } ); %></li>
             <li>Rating:&nbsp;&nbsp;<div class='starrr' data-rating="<%= stars %>"></div></li>
 	        </ul>
