--- a/app/index.html
+++ b/app/index.html
@@ -108,8 +108,8 @@
         </div>
         <div class="bookItemListContainer">
           <ul>
-            <li>Title: <%= title %></li>
-            <li>Author: <%= author %></li>
+            <li><%= title %></li>
+            <li>by <%= author %></li>
             <li>Completed: <%= $.format.date( new Date( dateCompleted ), 'MMMM yyyy' ) %></li>
 		        <li>Keywords: &nbsp; <% _.each( keywords, function( keyobj ) { %><%= keyobj.keyword %><% } ); %></li>
             <li>Rating:&nbsp;&nbsp;<div class='starrr' data-rating="<%= stars %>"></div></li>
