--- a/app/index.html
+++ b/app/index.html
@@ -145,7 +145,33 @@
           </div>
         </div>
 
+
+ <!-- comment modal -->
+
+        <div class="modal fade" id="commentModal" tabindex="-1" role="dialog" aria-labelledby="commentModal" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="commentModalLabel">Comment</h4>
+              </div>
+              <div class="modal-body">
+                <form action="#" id="commentForm"></form>
+                <textarea name="comment" id="commentBox" form="commentForm" placeholder="Critique . . ."></textarea>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+<!-- booklist -->
+
         <div id="bookList" class="col-md-12"></div>
+
 
       </div>
     </div>
@@ -173,7 +199,9 @@
         <img class="delete" src="img/delete.png">
         <div class="bookInteractionBar">
           <div class="bookUpdated">Last Updated: <%= moment(new Date(created)).fromNow() %></div>
-          <button class="bookButton"><a href="#/booyah">Comment</a></button> 
+          <button class="bookButton"><a href="#/booyah"
+               data-toggle="modal"
+               data-target="#commentModal">Comment</a></button> 
           <button class="bookButton"><a href="#" class="edit"
                 data-toggle="modal"
                 data-target="#editBookModal">Edit</a></button> 
@@ -182,10 +210,13 @@
     </div>
   </script>
 
+
+
   <script src="js/lib/jquery.js"></script>
   <script src="js/lib/jquery-ui.js"></script>
   <script src="js/lib/jquery-dateFormat.min.js"></script>
   <script src="js/lib/jquery.form.min.js"></script>
+  <script src="/js/lib/autosize.min.js"></script>
   <script src="js/lib/starrr.js"></script>
   <script src="js/lib/moment.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
