--- a/app/index.html
+++ b/app/index.html
@@ -156,12 +156,14 @@
                 <h4 class="modal-title" id="commentModalLabel">Comment</h4>
               </div>
               <div class="modal-body">
-                <form action="#" id="commentForm"></form>
+                <form action="#" id="commentForm">
+                  <button id="comment-update" class="btn btn-primary hidden">Update</button>
+                </form>
                 <textarea name="comment" id="commentBox" form="commentForm" placeholder="Critique . . ."></textarea>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button for="comment-update" type="button" id="comment-update-btn" class="btn btn-primary">Save & Close</button>
               </div>
             </div>
           </div>
