adds sort-by html&css

--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,21 @@
       <div class="container center-block">
 
 
+<!-- sort by  -->
+        <div class="sort-by-container">
+          <div class="sort-by btn-group">
+            <button class="btn btn-small">Sort By</button>
+            <button class="btn btn-small dropdown-toggle" data-toggle="dropdown">
+              <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+              <li><a href="#">Title</a></li>
+              <li><a href="#">Author</a></li>
+              <li><a href="#">Date Completed</a></li>
+            </ul>
+          </div>
+        </div>
+
 <!-- create book modal -->
         <div class="modal fade" id="addBookModal" tabindex="-1" role="dialog" aria-labelledby="addBookModal" aria-hidden="true">
           <div class="modal-dialog">
