adds initial sortByField functionality

--- a/app/index.html
+++ b/app/index.html
@@ -66,9 +66,9 @@
               <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
-              <li><a href="#">Title</a></li>
-              <li><a href="#">Author</a></li>
-              <li><a href="#">Date Completed</a></li>
+              <li><a href="#/title">Title</a></li>
+              <li><a href="#/author">Author</a></li>
+              <li><a href="#/dateCompleted">Date Completed</a></li>
             </ul>
           </div>
         </div>
