adds primary authentication

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,9 @@
                 data-toggle="modal"
                 data-target="#addBookModal">Add Book</a>
             </li>
+            <li>
+               <a href="#" class="add-book-btn" id="logout">Logout</a>
+            </li>
           </ul>
         </div>
       </div>
