--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
           <a class="navbar-brand" href="http://www.andersonholderness.com">
             <img class="img-responsive nav-logo" src="/img/fly-pig-serious-icon.png">
           </a>
-          <div class="appTitle navbar-left">Book Dangerous</div>
+          <div class="appTitle navbar-left">BK LST</div>
           <button type="button" class="navbar-right navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="fa fa-bars"></span>
@@ -44,7 +44,7 @@
                 data-target="#addBookModal">Add Book</a>
             </li>
             <li>
-               <a href="#" class="add-book-btn" id="logout">Logout</a>
+               <a href="#signUp" class="add-book-btn">Sign Up</a>
             </li>
           </ul>
         </div>
@@ -57,6 +57,15 @@
 
 
   <div id="page-content">
+
+ Login
+  </div>
+
+
+
+
+
+  <script id="libraryTemplate" type="text/template">
     <div class="row">
       <div class="container center-block">
 
@@ -195,10 +204,8 @@
 
       </div>
     </div>
-  </div>
 
-
-
+  </script>
 
 
   <script id="bookTemplate" type="text/template">
@@ -231,6 +238,26 @@
   </script>
 
 
+  <script id="loginTemplate" type="text/template">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4 text-center">
+        <div class="well">
+          <div class="form-group">
+            <label> Name </label>
+            <input type="text" class="form-control" id="usernameText" placeholder="Username">
+            <input type="text" class="form-control" id="passwordText" placeholder="Password">
+
+            <label class="control-label"> </label>
+
+            <br>
+            <a id="signUpBtn" type="button" class="btn btn-primary btn-lg"><span>Sign Up</span></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </script>
+
+
 
   <script src="js/lib/jquery.js"></script>
   <script src="js/lib/jquery-ui.js"></script>
@@ -243,11 +270,13 @@
   <script src="js/lib/underscore.js"></script>
   <script src="js/lib/backbone.js"></script>
   <script src="js/models/book.js"></script>
+  <script src="js/models/login.js"></script>
   <script src="js/collections/booklist.js"></script>
   <script src="js/views/book.js"></script>
   <script src="js/views/booklist.js"></script>
   <script src="js/views/thumbnail.js"></script>
   <script src="js/views/library.js"></script>
+  <script src="js/views/login.js"></script>
   <script src="js/routers/router.js"></script>
   <script src="js/app.js"></script>
 
