working user authenticated site using passport's BasicStrategy

--- a/public/index.html
+++ b/public/index.html
@@ -40,12 +40,16 @@
           <ul class="nav navbar-nav navbar-right">
             <li>
                <a href="#" class="add-book-btn"
+                id="addBook"
                 data-toggle="modal"
                 data-target="#addBookModal">Add Book</a>
             </li>
             <li>
                <a href="#signUp" class="add-book-btn">Sign Up</a>
             </li>
+<!--             <li>
+               <a href="#logout" id="logout" class="add-book-btn">logout</a>
+            </li> -->
           </ul>
         </div>
       </div>
