--- a/public/index.html
+++ b/public/index.html
@@ -258,6 +258,25 @@
     </div>
   </script>
 
+  <script id="registerTemplate" type="text/template">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4 text-center">
+        <div class="well">
+          <div class="form-group">
+            <label> Name </label>
+            <input type="text" class="form-control" id="usernameText" placeholder="Username">
+            <input type="text" class="form-control" id="passwordText" placeholder="Password">
+
+            <label class="control-label"> </label>
+
+            <br>
+            <a id="signUpBtn" type="button" class="btn btn-primary btn-lg"><span>Sign Up</span></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </script>
+
 
 
   <script src="js/lib/jquery.js"></script>
@@ -278,6 +297,7 @@
   <script src="js/views/thumbnail.js"></script>
   <script src="js/views/library.js"></script>
   <script src="js/views/login.js"></script>
+  <script src="js/views/register.js"></script>
   <script src="js/routers/router.js"></script>
   <script src="js/app.js"></script>
 
